k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scottlms
  labels:
    name: scottlms
    app: scottlms
